Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I781749a47677cef224c9aa79c1333374a2e86fe8

--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -596,7 +596,7 @@
     <string name="lock_last_password_attempt_before_wipe_device" msgid="985126164175708507">"ଏଥର ମଧ୍ୟ ଭୁଲ ପାସ୍‌ୱାର୍ଡ ଲେଖିଲେ ଏହି ଡିଭାଇସ୍‌ ଡାଟା ଲିଭାଇ ଦିଆଯିବ"</string>
     <string name="lock_last_pattern_attempt_before_wipe_user" msgid="8283944727199433440">"ପରବର୍ତ୍ତୀ ପ୍ରୟାସରେ ଯଦି ଆପଣ ଭୁଲ ପାଟର୍ନ ଅଙ୍କନ କରନ୍ତି, ତେବେ ଏହି ୟୁଜର ଡିଲିଟ ହୋଇଯିବେ"</string>
     <string name="lock_last_pin_attempt_before_wipe_user" msgid="972834567684477451">"ପରବର୍ତ୍ତୀ ପ୍ରୟାସରେ ଯଦି ଆପଣ ଭୁଲ ପିନ ନମ୍ବର ଲେଖନ୍ତି, ତେବେ ଏହି ୟୁଜର ଡିଲିଟ ହୋଇଯିବେ"</string>
-    <string name="lock_last_password_attempt_before_wipe_user" msgid="3797239847079686727">"ପରବର୍ତ୍ତୀ ପ୍ରୟାସରେ ଯଦି ଆପଣ ଭୁଲ ପାସ୍‌ୱର୍ଡ ଦିଅନ୍ତି, ତେବେ ଏହି ଉପଯୋଗକର୍ତ୍ତା ଡିଲିଟ୍‌ ହୋଇଯିବେ"</string>
+    <string name="lock_last_password_attempt_before_wipe_user" msgid="3797239847079686727">"ପରବର୍ତ୍ତୀ ପ୍ରୟାସରେ ଯଦି ଆପଣ ଭୁଲ ପାସୱର୍ଡ ଦିଅନ୍ତି ତେବେ ଏହି ୟୁଜର ଡିଲିଟ ହୋଇଯିବେ"</string>
     <string name="lock_last_pattern_attempt_before_wipe_profile" msgid="2479195488386373253">"ପରବର୍ତ୍ତୀ ପ୍ରଚେଷ୍ଟାରେ ଯଦି ଆପଣ ଭୁଲ ପାଟର୍ନ ଦିଅନ୍ତି, ତେବେ ଆପଣଙ୍କ ୱାର୍କ ପ୍ରୋଫାଇଲ୍‌ ଓ ଏହାର ଡାଟା ଡିଲିଟ୍‌ ହୋଇଯିବ"</string>
     <string name="lock_last_pin_attempt_before_wipe_profile" msgid="7086428013814722436">"ପରବର୍ତ୍ତୀ ପ୍ରଚେଷ୍ଟାରେ ଯଦି ଆପଣ ଭୁଲ PIN ଦିଅନ୍ତି, ତେବେ ଆପଣଙ୍କ ୱାର୍କ ପ୍ରୋଫାଇଲ୍‌ ଓ ତାର ଡାଟା ଡିଲିଟ୍‌ ହୋଇଯିବ"</string>
     <string name="lock_last_password_attempt_before_wipe_profile" msgid="253673907244112643">"ପରବର୍ତ୍ତୀ ପ୍ରଚେଷ୍ଟାରେ ଯଦି ଆପଣ ଭୁଲ ପାସ‌ୱାର୍ଡ ଲେଖନ୍ତି, ତେବେ ଆପଣଙ୍କର ୱାର୍କ ପ୍ରୋଫାଇଲ୍‌ ଓ ତାର ଡାଟାକୁ ଡିଲିଟ୍‌ କରିଦିଆଯିବ।"</string>
@@ -1605,7 +1605,7 @@
     <!-- no translation found for service_process_name (7827318358399776412) -->
     <skip />
     <string name="running_process_item_user_label" msgid="1444898861984132133">"ୟୁଜର: <xliff:g id="USER_NAME">%1$s</xliff:g>"</string>
-    <string name="running_process_item_removed_user_label" msgid="4812732296696662613">"କାଢ଼ିଦିଆଯାଇଥିବା ଉପଯୋଗକର୍ତ୍ତା"</string>
+    <string name="running_process_item_removed_user_label" msgid="4812732296696662613">"କାଢ଼ିଦିଆଯାଇଥିବା ୟୁଜର"</string>
     <string name="running_processes_item_description_s_s" msgid="6835918861352501671">"<xliff:g id="NUMPROCESS">%1$d</xliff:g> ପ୍ରକ୍ରିୟା ଏବଂ <xliff:g id="NUMSERVICES">%2$d</xliff:g> ସେବା"</string>
     <string name="running_processes_item_description_s_p" msgid="1209371773353932361">"<xliff:g id="NUMPROCESS">%1$d</xliff:g> ପ୍ରକ୍ରିୟା ଓ <xliff:g id="NUMSERVICES">%2$d</xliff:g> ସେବା"</string>
     <string name="running_processes_item_description_p_s" msgid="8957061449107822282">"<xliff:g id="NUMPROCESS">%1$d</xliff:g> ପ୍ରକ୍ରିୟା ଓ <xliff:g id="NUMSERVICES">%2$d</xliff:g> ସେବା"</string>
