--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -1436,13 +1436,13 @@
     <string name="lockpassword_forgot_pin" msgid="7164232234705747672">"PINa ahaztu zaizu?"</string>
     <string name="lockpassword_confirm_your_pattern_generic" msgid="7692794426682501482">"Aurrera egiteko, marraztu gailuaren eredua"</string>
     <string name="lockpassword_confirm_your_pin_generic" msgid="9206928587904701094">"Aurrera egiteko, idatzi gailuaren PINa"</string>
-    <string name="lockpassword_confirm_your_password_generic" msgid="2616127423884477152">"Aurrera egiteko, idatzi gailuaren pasahitza"</string>
+    <string name="lockpassword_confirm_your_password_generic" msgid="2616127423884477152">"Aurrera egiteko, idatzi gailuko pasahitza"</string>
     <string name="lockpassword_confirm_your_pattern_generic_profile" msgid="9110305410672321714">"Aurrera egiteko, marraztu laneko eredua"</string>
     <string name="lockpassword_confirm_your_pin_generic_profile" msgid="6524208128570235127">"Aurrera egiteko, idatzi laneko PINa"</string>
     <string name="lockpassword_confirm_your_password_generic_profile" msgid="5918738487760814147">"Aurrera egiteko, idatzi laneko pasahitza"</string>
     <string name="lockpassword_strong_auth_required_device_pattern" msgid="113817518413715557">"Segurtasuna bermatzeko, marraztu gailuaren eredua"</string>
     <string name="lockpassword_strong_auth_required_device_pin" msgid="9163822166411129815">"Segurtasuna bermatzeko, idatzi gailuaren PINa"</string>
-    <string name="lockpassword_strong_auth_required_device_password" msgid="8310047427464299337">"Segurtasuna bermatzeko, idatzi gailuaren pasahitza"</string>
+    <string name="lockpassword_strong_auth_required_device_password" msgid="8310047427464299337">"Segurtasuna bermatzeko, idatzi gailuko pasahitza"</string>
     <string name="lockpassword_strong_auth_required_work_pattern" msgid="6803652050512161140">"Segurtasuna bermatzeko, marraztu laneko eredua"</string>
     <string name="lockpassword_strong_auth_required_work_pin" msgid="4208510396448713500">"Segurtasuna bermatzeko, idatzi laneko PINa"</string>
     <string name="lockpassword_strong_auth_required_work_password" msgid="6119482061429323090">"Segurtasuna bermatzeko, idatzi laneko pasahitza"</string>
