--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -3461,7 +3461,7 @@
     <string name="device_feedback" msgid="5351614458411688608">"Sūtīt atsauksmes par šo ierīci"</string>
     <string name="restr_pin_enter_admin_pin" msgid="4435410646541671918">"Ievadiet administratora PIN"</string>
     <string name="switch_on_text" msgid="5664542327776075105">"Ieslēgts"</string>
-    <string name="switch_off_text" msgid="1315547447393646667">"Izslēgts"</string>
+    <string name="switch_off_text" msgid="1315547447393646667">"Izslēgta"</string>
     <string name="nfc_setting_on" msgid="7701896496026725772">"Ieslēgti"</string>
     <string name="nfc_setting_off" msgid="7142103438532732309">"Izslēgti"</string>
     <string name="screen_pinning_switch_on_text" msgid="6971386830247542552">"Ieslēgta"</string>
